// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryLog class validate when count is invalid, validate should contain 1 count error 1`] = `
{
  "count": true,
  "errorCount": 1,
}
`;

exports[`EntryLog class validate when date is in the future, validate should contain 1 date error 1`] = `
{
  "date": true,
  "errorCount": 1,
}
`;

exports[`EntryLog class validate when no errors, validate should represent no errors 1`] = `
{
  "errorCount": 0,
}
`;

exports[`EntryLog class validate when time is in the future, validate should contain 1 time error 1`] = `
{
  "errorCount": 1,
  "time": true,
}
`;

exports[`EntryLog class when given no parameters, then return defaults 1`] = `
{
  "count": 30,
  "dateTime": 2022-11-10T22:33:44.000Z,
  "id": Any<String>,
  "version": 1,
}
`;
